[package]
name = "livingstone"
version = "0.1.0"
authors = ["Ben Brittain <ben@brittain.org>"]

[dependencies]
rand = "0.3.15"
router = "0.5.1"
iron = "0.5.1"
iron-sessionstorage = "0.6.6"
staticfile = "0.4.0"
mount = "0.3.0"
urlencoded = "0.5.0"
serde_json = "0.9.10"
serde_derive = "0.9.14"
serde = "0.9.14"
xml-rs = "0.4.1"
comrak = "0.1.4"

[dependencies.chrono]
version = "0.3.0"
features = ["serde"]

[dependencies.handlebars-iron]
version = "0.23.1"
features = ["serde_type"]

[features]
watch = ["handlebars-iron/watch"]
